FLUID-4884: Working expand/collapse arrows with layout update - factored out shared definitions into StructureView.js

--- a/demos/chartAuthoring/chartAuthoring.html
+++ b/demos/chartAuthoring/chartAuthoring.html
@@ -25,6 +25,7 @@
         <script src="../../node_modules/infusion/src/framework/enhancement/js/ProgressiveEnhancement.js"></script>
         <script src="../../node_modules/infusion/src/framework/core/js/FluidView.js"></script>
         <script src="../../node_modules/infusion/src/framework/core/js/ResourceLoader.js"></script>
+        <script src="../../node_modules/infusion/src/framework/renderer/js/fluidParser.js"></script>
         <!-- Some of these definitions will be factored out into FluidViewDebuggingCore.js
         <script src="../../node_modules/infusion/src/framework/core/js/FluidViewDebugging.js"></script>
         -->
@@ -75,6 +76,7 @@
         <script src="../../src/js/FluidViewDebuggingCore.js"></script>
         <script src="../../src/js/ViewComponentSupport.js"></script>
         <script src="../../src/js/DynamicComponentIndexer.js"></script>
+        <script src="../../src/js/StructureView.js"></script>
         <script src="../../src/js/ComponentGraph.js"></script>
 
         <link rel="stylesheet" type="text/css" href="../../src/css/ComponentGraph.css" />
