--- a/demos/chartAuthoring/chartAuthoring.html
+++ b/demos/chartAuthoring/chartAuthoring.html
@@ -11,7 +11,8 @@
 
         <script src="../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
         <script src="../../node_modules/infusion/src/lib/jquery/ui/js/jquery-ui.js"></script>
-        
+
+        <script src="../../node_modules/infusion/src/lib/fastXmlPull/js/fastXmlPull.js"></script>
         <script src="../../node_modules/infusion/src/framework/core/js/jquery.keyboard-a11y.js"></script>
         <script src="../../node_modules/infusion/src/framework/core/js/Fluid.js"></script>
         <script src="../../node_modules/infusion/src/framework/core/js/FluidDebugging.js"></script>
@@ -71,15 +72,15 @@
         
         <!-- Below here: definitions for the authoring environment -->
 
-        <script src="../../src/js/AuthorUtils.js"></script>
-        <script src="../../src/js/DecoratorViewComponent.js"></script>
-        <script src="../../src/js/FluidViewDebuggingCore.js"></script>
-        <script src="../../src/js/ViewComponentSupport.js"></script>
-        <script src="../../src/js/DynamicComponentIndexer.js"></script>
-        <script src="../../src/js/StructureView.js"></script>
-        <script src="../../src/js/ComponentGraph.js"></script>
+        <script src="../../src/client/js/AuthorUtils.js"></script>
+        <script src="../../src/client/js/DecoratorViewComponent.js"></script>
+        <script src="../../src/client/js/FluidViewDebuggingCore.js"></script>
+        <script src="../../src/client/js/ViewComponentSupport.js"></script>
+        <script src="../../src/client/js/DynamicComponentIndexer.js"></script>
+        <script src="../../src/client/js/StructureView.js"></script>
+        <script src="../../src/client/js/ComponentGraph.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="../../src/css/ComponentGraph.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/client/css/ComponentGraph.css" />
 
         <title>Chart Authoring Tool - Authoring Demo</title>
     </head>
