FLUID-4884: Repaired local, chartAuthoring based demo

--- a/demos/chartAuthoring/chartAuthoring.html
+++ b/demos/chartAuthoring/chartAuthoring.html
@@ -101,7 +101,7 @@
                         }
                     });
                     
-                    fluid.author.componentGraphPanel.popup("body");
+                    fluid.author.componentGraphPanel.popup.local("body");
                 </script>
             </div>
 
