First version of Visible Nexus fully working from npm dependencies, featuring some keyboard a11y, basic ARIA labels and a simple README.

--- a/src/server/html/visibleNexus.html
+++ b/src/server/html/visibleNexus.html
@@ -32,12 +32,15 @@
         
         <script src="%fluid-authoring/shared/js/AuthorUtils.js"></script>
         <script src="%fluid-authoring/shared/js/ComponentGraphUtilities.js"></script>
+        <script src="%fluid-authoring/client/js/PlainAriaLabels.js"></script>
+        <script src="%fluid-authoring/client/js/KeyboardSupport.js"></script>
         <script src="%fluid-authoring/client/js/DecoratorViewComponent.js"></script>
         <script src="%fluid-authoring/client/js/FluidViewDebuggingCore.js"></script>
         <script src="%fluid-authoring/client/js/ViewComponentSupport.js"></script>
         <script src="%fluid-authoring/client/js/DynamicComponentIndexer.js"></script>
         <script src="%fluid-authoring/client/js/StructureView.js"></script>
         <script src="%fluid-authoring/client/js/ComponentGraph.js"></script>
+        <script src="%fluid-authoring/client/js/ComponentGraphArrows.js"></script>
         <script src="%fluid-authoring/client/js/ComponentGraphRemote.js"></script>
 
         <link rel="stylesheet" type="text/css" href="%fluid-authoring/client/css/ComponentGraph.css" />
