--- a/demos/chartAuthoring/chartAuthoring.html
+++ b/demos/chartAuthoring/chartAuthoring.html
@@ -74,12 +74,15 @@
 
         <script src="../../src/shared/js/AuthorUtils.js"></script>
         <script src="../../src/shared/js/ComponentGraphUtilities.js"></script>
+        <script src="../../src/client/js/PlainAriaLabels.js"></script>
+        <script src="../../src/client/js/KeyboardSupport.js"></script>
         <script src="../../src/client/js/DecoratorViewComponent.js"></script>
         <script src="../../src/client/js/FluidViewDebuggingCore.js"></script>
         <script src="../../src/client/js/ViewComponentSupport.js"></script>
         <script src="../../src/client/js/DynamicComponentIndexer.js"></script>
         <script src="../../src/client/js/StructureView.js"></script>
         <script src="../../src/client/js/ComponentGraph.js"></script>
+        <script src="../../src/client/js/ComponentGraphArrows.js"></script>
         <script src="../../src/client/js/ComponentGraphLocal.js"></script>
 
         <link rel="stylesheet" type="text/css" href="../../src/client/css/ComponentGraph.css" />
