FLUID-4884: Made popup panel resizable, and fixed model change highlighting on Firefox

--- a/demos/chartAuthoring/chartAuthoring.html
+++ b/demos/chartAuthoring/chartAuthoring.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../node_modules/infusion/src/lib/normalize/css/normalize.css" />
+        <link rel="stylesheet" href="../../node_modules/infusion/src/lib/jquery/ui/css/default-theme/jquery-ui.css"></script>
         <link rel="stylesheet" type="text/css" href="../../node_modules/infusion/src/framework/core/css/fluid.css" />
         <link rel="stylesheet" type="text/css" href="../../node_modules/infusion/src/framework/core/css/fluidDebugging.css" />
         <link rel="stylesheet" type="text/css" href="../../node_modules/infusion/src/components/overviewPanel/css/OverviewPanel.css" />
